macros/tests/fail/extra_arg.rs
fn main() {
    sqlm_macros::sql!("{}", 1, 2);
}
